# netbox-cf-backrefs

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: publish.yml
docs/: TODO-custom-objects-tab.md
docs/smoke-tests/: 2026-05-07-cf-backrefs-tab-smoke.md  2026-06-05-custom-objects-smoke.md
docs/superpowers/plans/: 2026-05-06-netbox-cf-backrefs.md  2026-05-07-cf-backrefs-tab.md
docs/superpowers/specs/: 2026-05-06-netbox-cf-backrefs-design.md  2026-05-07-cf-backrefs-tab-design.md
netbox_cf_backrefs/: __init__.py  display.py  filters.py  tables.py  template_content.py  utils.py  version.py  views.py
netbox_cf_backrefs/templates/netbox_cf_backrefs/: _paginator.html  panel.html  tab.html  tab_partial.html
netbox_cf_backrefs/tests/: _factories.py  configuration.py  test_db_not_ready.py  test_display.py  test_filters.py  test_tab.py  test_template_content.py  test_utils.py
